Msg: feat: finalize atomic upsert and intelligence enrichment layer for v1.0.1